[gd_scene load_steps=15 format=2]

[ext_resource path="res://Enemy/Robocto/Robocto.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/UI/noink.png" type="Texture" id=2]
[ext_resource path="res://Player/UI/inktank.png" type="Texture" id=3]
[ext_resource path="res://Player/UI/recoverink.png" type="Texture" id=4]
[ext_resource path="res://Player/UI/inktank_full.png" type="Texture" id=5]
[ext_resource path="res://General/UI/panel.png" type="Texture" id=6]
[ext_resource path="res://Player/UI/InkTankUI.gd" type="Script" id=7]
[ext_resource path="res://Ink/MapInkManager.gd" type="Script" id=9]
[ext_resource path="res://Ink/ink_grid.png" type="Texture" id=10]
[ext_resource path="res://Ink/ink_temp.png" type="Texture" id=11]
[ext_resource path="res://Player/Temp/TempPlayer.tscn" type="PackedScene" id=13]

[sub_resource type="Animation" id=1]
resource_name = "ink_recover"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("RecoverInkTexture:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.882353 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NoInkTexture:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "no_ink"
tracks/0/type = "value"
tracks/0/path = NodePath("RecoverInkTexture:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NoInkTexture:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="NavigationPolygon" id=3]
vertices = PoolVector2Array( 856, 56, 856, 520, 152, 520, 152, 56 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 152, 56, 152, 520, 856, 520, 856, 56 ) ]

[node name="Game" type="Node"]
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="UI" type="CanvasLayer" parent="."]

[node name="InkTankUI" type="NinePatchRect" parent="UI"]
self_modulate = Color( 0.713726, 0.713726, 0.713726, 0.560784 )
margin_left = 35.0
margin_top = 24.0
margin_right = 83.0
margin_bottom = 120.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="UI/InkTankUI"]
self_modulate = Color( 1, 1, 1, 0.803922 )
anchor_left = 0.15
anchor_top = 0.1
anchor_right = 0.85
anchor_bottom = 0.9
value = 100.0
rounded = true
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 5 )
fill_mode = 3
nine_patch_stretch = true
stretch_margin_left = 8
stretch_margin_top = 16
stretch_margin_right = 8
stretch_margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoInkTexture" type="TextureRect" parent="UI/InkTankUI"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.15
anchor_top = 0.1
anchor_right = 0.85
anchor_bottom = 0.9
margin_top = 22.0
margin_bottom = -22.0
size_flags_horizontal = 12
size_flags_vertical = 12
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecoverInkTexture" type="TextureRect" parent="UI/InkTankUI"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.15
anchor_top = 0.1
anchor_right = 0.85
anchor_bottom = 0.9
margin_left = -0.2
margin_top = 8.0
margin_right = 32.2
margin_bottom = -12.0
rect_scale = Vector2( 0.5, 1 )
size_flags_horizontal = 4
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/InkTankUI"]
anims/ink_recover = SubResource( 1 )
anims/no_ink = SubResource( 2 )

[node name="FadeTimer" type="Timer" parent="UI/InkTankUI"]
wait_time = 0.75

[node name="Entities" type="YSort" parent="."]

[node name="Robocto" parent="Entities" instance=ExtResource( 1 )]
position = Vector2( 674.943, 201.418 )

[node name="Player" parent="Entities" instance=ExtResource( 13 )]
position = Vector2( 240, 208 )
mouseControl = true

[node name="InkManager" type="Node2D" parent="."]
position = Vector2( 128, 32 )
z_index = -1
script = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}
brushsize = 4

[node name="ResourcePreloader" type="ResourcePreloader" parent="InkManager"]
resources = [ PoolStringArray( "ink_grid", "ink_temp" ), [ ExtResource( 10 ), ExtResource( 11 ) ] ]

[node name="Boundaries" type="StaticBody2D" parent="."]
position = Vector2( 128, 32 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Boundaries"]
visible = false
build_mode = 1
polygon = PoolVector2Array( 0, 0, 752, 0, 752, 512, 0, 512 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
visible = false
navpoly = SubResource( 3 )
[connection signal="timeout" from="UI/InkTankUI/FadeTimer" to="UI/InkTankUI" method="_on_FadeTimer_timeout"]
[connection signal="ink_fail" from="Entities/Player" to="UI/InkTankUI" method="_on_TempPlayer_ink_fail"]
[connection signal="ink_recover" from="Entities/Player" to="UI/InkTankUI" method="_on_TempPlayer_ink_recover"]
[connection signal="ink_use" from="Entities/Player" to="UI/InkTankUI" method="_on_TempPlayer_ink_use"]
